--- a/wp-content/themes/addlee/assets/scss/theme/_components-awards.scss
+++ b/wp-content/themes/addlee/assets/scss/theme/_components-awards.scss
@@ -5,27 +5,76 @@
         padding-top: 2em;
         padding-bottom: 2em;
         display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
+        justify-content: space-evenly;
+        flex-direction: row;
         margin: 0 auto;
-        max-width: 1140px;
-        /*align-items: center;
-        
-        */
+        max-width: 1400px;
+        align-items: center;
 
+        @media only screen and ( max-width: 827px) {
+            width: 50%;
+            margin: 0 auto;
+        }
+
+        &__single-item {
+            padding-top: 2em;
+            padding-bottom: 2em;
+            display: flex;
+            justify-content: flex-start;
+            flex-direction: row;
+            margin: 0 auto;
+            max-width: 1235px;
+            align-items: center;
+
+            @media only screen and ( max-width: 827px) {
+                width: 50%;
+                margin: 0 auto;
+                justify-content: center;
+            }
+
+            .item-card-single-item {
+        
+                width: 350px;
+                height: 350px;
+                padding: 24px;
+                background-color: #fff;
+                position: relative;
+                margin-right: 64px;
+                margin-bottom: 64px;
+    
+                img {
+                    max-width: 200px;
+                    max-height: 147px;
+                    position: absolute;
+                    top: 73.21px;
+                    left: 75px;
+                    right: 75px;
+                    margin: 0 auto;
+                }
+    
+                p {
+                    width: 230px;
+                    position: absolute;
+                    bottom: 30px;
+                    left: 0;
+                    right: 0;
+                    margin: 0 auto;
+    
+                }
+                
+            }
+        }
 
 
         .item-card {
+        
             width: 350px;
             height: 350px;
-            display: flex;
-            background-color: $white;
-            margin-right: 29px;
-            margin-bottom: 29px;
-            align-items: center;
-            flex-direction: column;
             padding: 24px;
+            background-color: #fff;
             position: relative;
+            margin-right: 64px;
+            margin-bottom: 64px;
 
             img {
                 max-width: 200px;
@@ -38,9 +87,12 @@
             }
 
             p {
-                width: 363px;
+                width: 230px;
                 position: absolute;
-                bottom: 24px;
+                bottom: 30px;
+                left: 0;
+                right: 0;
+                margin: 0 auto;
 
             }
             
